--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
    
   <style>.cls-1{fill:#fff;}.cls-2,.cls-6{fill:#117dc0;}.cls-3,.cls-6{opacity:0.4;}.cls-4{fill:#f1f1f1;}.cls-5{fill:#127dbf;}.cls-7{fill:#094064;}.cls-8{fill:#5aa3d2;}.cls-9{fill:#e7f2f9;}.cls-10{fill:#127cc0;}.cls-11{fill:#f68f1e;}.cls-12{fill:#f37021;}.cls-13{fill:#003250;}</style>
 
-  <title>Minimal UI Kit</title>
+  <title>Business Rate</title>
   <meta name="description"
     content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style" />
   <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
